--- a/Exercises/IntroToSoftwareDesign/Week1Quiz2.html
+++ b/Exercises/IntroToSoftwareDesign/Week1Quiz2.html
@@ -4,7 +4,7 @@
     <title>Turning MicroWorlds into Code</title>
     <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.14/require.min.js"></script>
     <script src="../../khan-exercises/local-only/main.js" ></script>
-    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
   </head>
 
   <body data-height="880" data-width="950">
@@ -13,12 +13,15 @@
 
         <div id="ReadingQuiz2Q1">
           <p class="question">
-          Consider the following example of a LightBot program written out in text.  Again, in this case we have named our robot "andy".  When would andy jump?
-          <pre class="prettyprint">
-          andy.move()
-        andy.turnRight()
-        andy.move()
-        andy.jump()</pre>
+            Consider the following example of a LightBot program written out in text.  Again, in this case we have named our robot "andy".  When would andy jump?
+            <pre class="prettyprint">
+
+              andy.move()
+              andy.turnRight()
+              andy.move()
+              andy.jump()
+            </pre>
+
           </p>
 
           <div class="solution">Jumping will be the FOURTH thing andy does</div>
