messign around with newlines

--- a/Exercises/IntroToSoftwareDesign/Week1Quiz2Q1.html
+++ b/Exercises/IntroToSoftwareDesign/Week1Quiz2Q1.html
@@ -14,9 +14,7 @@
         <div id="ReadingQuiz2Q1">
           <p class="question">
             Consider the following example of a LightBot program written out in text.  Again, in this case we have named our robot "andy".  When would andy jump?
-            <pre class="prettyprint">
-
-              andy.move()
+            <pre class="prettyprint">andy.move()
               andy.turnRight()
               andy.move()
               andy.jump()
